<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/RlModoImperativo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/d0"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/modo_imperativo"
            android:textAlignment="center"
            android:textStyle="bold" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/d1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/d0"
            android:background="@color/colorPrimary"
            android:visibility="visible">

            <TextView
                android:id="@+id/d2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@color/colorPrimaryDark"
                android:clickable="false"
                android:gravity="center_vertical"
                android:text="@string/afirmativo"
                android:textAlignment="center"
                android:textColor="#fff"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/d4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"

                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d2" />

            <TextView
                android:id="@+id/d5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"

                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d4" />

            <TextView
                android:id="@+id/d7"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"

                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d6" />

            <TextView
                android:id="@+id/d9"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"

                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d8" />

            <TextView
                android:id="@+id/d11"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"

                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d10" />

            <TextView
                android:id="@+id/d3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"

                android:padding="3dp"
                android:text="@string/tu"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d2" />

            <TextView
                android:id="@+id/d6"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"

                android:padding="3dp"
                android:text="@string/usted"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d4" />

            <TextView
                android:id="@+id/d8"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"

                android:padding="3dp"
                android:text="@string/nosotros"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d6" />

            <TextView
                android:id="@+id/d10"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"

                android:padding="3dp"
                android:text="@string/vosotros"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d8" />

            <TextView
                android:id="@+id/d12"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"

                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:text="@string/ustedes"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d10" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/d15"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/d1"
            android:background="@color/colorPrimary"
            android:paddingTop="5dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/d16"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:text="@string/negativo"
                android:textAlignment="center"
                android:textColor="#fff"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/d18"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"

                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d16" />

            <TextView
                android:id="@+id/d19"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"

                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d18" />

            <TextView
                android:id="@+id/d21"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"

                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d20" />

            <TextView
                android:id="@+id/d23"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"

                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d22" />

            <TextView
                android:id="@+id/d25"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"

                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d24" />

            <TextView
                android:id="@+id/d17"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"

                android:padding="3dp"
                android:text="@string/tu_no"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d16" />

            <TextView
                android:id="@+id/d20"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"

                android:padding="3dp"
                android:text="@string/usted_no"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d18" />

            <TextView
                android:id="@+id/d22"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"

                android:padding="3dp"
                android:text="@string/nosotros_no"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d20" />

            <TextView
                android:id="@+id/d24"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"

                android:padding="3dp"
                android:text="@string/vosotros_no"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d22" />

            <TextView
                android:id="@+id/d26"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"

                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:text="@string/ustedes_no"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d24" />

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>


</ScrollView>
