<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/RlModoCondicional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/c0"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/modo_condicional"
            android:textAlignment="center"
            android:textStyle="bold" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/c1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/c0"
            android:background="@color/colorPrimary"
            android:visibility="visible">

            <TextView
                android:id="@+id/c2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@color/colorPrimaryDark"
                android:clickable="false"
                android:gravity="center_vertical"
                android:text="@string/condicional"
                android:textAlignment="center"
                android:textColor="#fff"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/c4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c2" />

            <TextView
                android:id="@+id/c5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c4" />

            <TextView
                android:id="@+id/c7"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c6" />

            <TextView
                android:id="@+id/c9"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c8" />

            <TextView
                android:id="@+id/c11"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c10" />

            <TextView
                android:id="@+id/c14"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c12"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/c3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:text="@string/yo"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c2" />

            <TextView
                android:id="@+id/c6"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:text="@string/tu"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c4" />

            <TextView
                android:id="@+id/c8"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:text="@string/el"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c6" />

            <TextView
                android:id="@+id/c10"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:text="@string/nosotros"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c8" />

            <TextView
                android:id="@+id/c12"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:text="@string/vosotros"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c10" />

            <TextView
                android:id="@+id/c13"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:text="@string/ellos"
                android:textColor="#fff"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c12"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

        </android.support.constraint.ConstraintLayout>


    </RelativeLayout>


</ScrollView>
